--- a/public/Asset/css/myStyle.css
+++ b/public/Asset/css/myStyle.css
@@ -290,3 +290,36 @@
 .note:hover::after{
     display: block;
 }
+
+.account-container{
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px,400px));
+    gap: 20px;
+    justify-content: center;;
+}
+
+
+/* BACKGROUND */
+
+
+body, html {
+    background: transparent;
+}
+
+#bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+#bg canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
