--- a/public/Asset/css/myStyle.css
+++ b/public/Asset/css/myStyle.css
@@ -323,3 +323,21 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+.crm-link{
+    transition: 0.7s;
+    animation: crm-link 0.7s 1;
+}
+
+.crm-link:hover{
+    transform: scale(1.1);
+}
+
+@keyframes crm-link {
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform: scale(1);
+    }
+}
