--- a/public/Asset/css/myStyle.css
+++ b/public/Asset/css/myStyle.css
@@ -338,6 +338,30 @@ body, html {
     grid-template-columns: repeat(auto-fit,minmax(100px, 130px));
 }
 
+.product-card{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+    gap: 25px;
+    justify-content: space-between;
+}
+
+/*.product-container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    border: 1px solid #ccc;*/
+/*    padding: 10px;*/
+/*    margin-bottom: 20px;*/
+/*    position: relative;*/
+/*}*/
+
+/*.product-container .price {*/
+/*    position: absolute;*/
+/*    bottom: 10px;*/
+/*    right: 10px;*/
+/*    background-color: #fff;*/
+/*    padding: 5px;*/
+/*}*/
+
 @keyframes crm-link {
     from{
         transform: scale(0);
